_sass/index.scss
#index {

  section.section, section.hero {
    margin-bottom: 6rem;
    padding-top: 0;
    padding-bottom: 0;
  }

  nav.navbar {
    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1);
  }

  nav a.navbar-item {
    &,
    &:hover,
    &:focus {
      background-color: white;
      color: black;
    }
  }

  nav a.navbar-item.is-active {
    &,
    &:hover,
    &:focus {
      color: $navbar-item-active-color;
      background-color: $navbar-item-active-background-color;
    }
  }

  nav .navbar-item {
    border-radius: 1rem;
    margin: 5px;
  }


  h2.manikin {
    border-bottom: 2px solid $primary;
    background-image: url("/assets/images/figur.svg");
    background-size: contain;
    background-repeat: no-repeat;
    padding-top: 10px;
  }


  .more-content {
    display: none;
  }


  #home {
    background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgb(25, 25, 25) 100%), url(/assets/images/christoph.jpg);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right center;
  }

  #uber-mich {
    background-image: linear-gradient(to left, rgba(192, 116, 116, 0) 0%, rgb(25, 25, 25) 75%), url(/assets/images/behandlung.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: right center;
  }


  #review {
    .image img {
      height: 70px;
      border-radius: 100%;
    }

    .stars {
      color: orange;
    }

    .content {
      font-style: italic;
    }
  }

  #blog {
    padding: 0rem 0.75rem;
    overflow-x: auto;

    .columns {
      margin: 0;
    }

    .column {
      flex: none;
      width: 24rem;
      max-width: 80%
    }

    .card {
      overflow: hidden;
      height: 100%;
      display: flex;
      flex-direction: column;

      .card-content {
        height: 100%;

        .title {
          margin-bottom: 0.75rem;
        }

        @include mobile {
          padding: 1.5rem 0.75rem;
        }
      }

      .button {
        border-radius: 0;
      }
    }
  }
}

